# docs/swagger/openapi.yaml
@@ -1,10 +1,10 @@
 openapi: 3.1.0
 info:
-  title: 受講生管理システム
-  description: 受講生の登録・検索・更新を行うAPI
+  title: StudentManagement
+  description: 受講生の登録・検索・更新、コースマスタの登録・検索・更新を行うAPI
   contact:
     name: 管理者
-    email: ciany.f@gmail.com
+    email: admin@example.com
   version: '1.0'
 servers:
   - url: http://localhost:8080
@@ -17,206 +17,6 @@ tags:
   - name: コースマスタ管理
     description: コースマスタの登録・検索・更新を行うAPI
 paths:
-  /students:
-    get:
-      tags:
-        - 受講生管理
-      summary: 詳細検索
-      description: クエリパラメータから取得した条件で検索を行います。
-      operationId: searchStudents
-      parameters:
-        - name: searchForm
-          in: query
-          required: true
-          schema:
-            $ref: '#/components/schemas/StudentSearchForm'
-      responses:
-        '200':
-          description: 成功
-          content:
-            '*/*':
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/StudentDetail'
-        '404':
-          description: 該当する受講生が見つかりません
-          content:
-            '*/*':
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/StudentDetail'
-        '500':
-          description: サーバーエラー
-          content:
-            '*/*':
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/StudentDetail'
-    put:
-      tags:
-        - 受講生管理
-      summary: 受講生更新
-      description: 指定IDの受講生詳細情報を更新します。
-      operationId: updateStudent
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/StudentDetail'
-        required: true
-      responses:
-        '200':
-          description: 成功
-          content:
-            '*/*':
-              schema:
-                type: string
-        '400':
-          description: 更新処理に失敗しました
-          content:
-            '*/*':
-              schema:
-                type: string
-        '500':
-          description: サーバーエラー
-          content:
-            '*/*':
-              schema:
-                type: string
-    post:
-      tags:
-        - 受講生管理
-      summary: 受講生登録
-      description: 新規受講生の詳細情報を登録します。
-      operationId: registerStudent
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/StudentDetail'
-        required: true
-      responses:
-        '201':
-          description: 成功
-          content:
-            '*/*':
-              schema:
-                $ref: '#/components/schemas/StudentDetail'
-        '400':
-          description: 更新処理に失敗しました
-          content:
-            '*/*':
-              schema:
-                $ref: '#/components/schemas/StudentDetail'
-        '500':
-          description: サーバーエラー
-          content:
-            '*/*':
-              schema:
-                $ref: '#/components/schemas/StudentDetail'
-  /courses:
-    get:
-      tags:
-        - コースマスタ管理
-      summary: コースマスタ取得
-      description: コースマスタを全件取得します
-      operationId: getCourses
-      responses:
-        '200':
-          description: 成功
-          content:
-            '*/*':
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Course'
-        '404':
-          description: コースマスタが見つかりません
-          content:
-            '*/*':
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Course'
-        '500':
-          description: サーバーエラー
-          content:
-            '*/*':
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Course'
-    put:
-      tags:
-        - コースマスタ管理
-      summary: コースマスタ更新
-      description: 既存のコースマスタを更新します。
-      operationId: updateCourseMaster
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/Course'
-        required: true
-      responses:
-        '200':
-          description: 成功
-          content:
-            '*/*':
-              schema:
-                type: string
-        '400':
-          description: 更新処理に失敗しました
-          content:
-            '*/*':
-              schema:
-                type: string
-        '404':
-          description: 更新対象コースマスタが見つかりません
-          content:
-            '*/*':
-              schema:
-                type: string
-        '500':
-          description: サーバーエラー
-          content:
-            '*/*':
-              schema:
-                type: string
-    post:
-      tags:
-        - コースマスタ管理
-      summary: コースマスタ登録
-      description: 新規コースマスタを登録します。
-      operationId: registerCourseMaster
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/Course'
-        required: true
-      responses:
-        '201':
-          description: 成功
-          content:
-            '*/*':
-              schema:
-                $ref: '#/components/schemas/Course'
-        '400':
-          description: 登録処理に失敗しました
-          content:
-            '*/*':
-              schema:
-                $ref: '#/components/schemas/Course'
-        '500':
-          description: サーバーエラー
-          content:
-            '*/*':
-              schema:
-                $ref: '#/components/schemas/Course'
   /students/{studentId}:
     get:
       tags:
@@ -252,45 +52,34 @@ paths:
             '*/*':
               schema:
                 $ref: '#/components/schemas/StudentDetail'
-  /studentList:
-    get:
+    put:
       tags:
-        - 旧URIリダイレクト
-      summary: /students リダイレクト
-      description: 旧URIのハンドリングメソッドです。
-      operationId: redirectStudents
-      responses:
-        '200':
-          description: OK
-  /courses/{courseId}:
-    delete:
-      tags:
-        - コースマスタ管理
-      summary: コースマスタ削除
-      description: 既存のコースマスタを削除します。
-      operationId: deleteCourseMaster
+        - 受講生管理
+      summary: 受講生更新
+      description: 指定IDの受講生詳細情報を更新します。
+      operationId: updateStudent
       parameters:
-        - name: courseId
+        - name: studentId
           in: path
           required: true
           schema:
             type: integer
             format: int32
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/StudentDetail'
+        required: true
       responses:
-        '204':
-          description: コースマスタ削除に成功しました
+        '200':
+          description: 成功
           content:
             '*/*':
               schema:
                 type: string
         '400':
-          description: 削除に失敗しました
-          content:
-            '*/*':
-              schema:
-                type: string
-        '404':
-          description: 削除対象コースマスタが見つかりません
+          description: 更新処理に失敗しました
           content:
             '*/*':
               schema:
@@ -301,6 +90,249 @@ paths:
             '*/*':
               schema:
                 type: string
+    patch:
+      tags:
+        - 受講生管理
+      summary: 受講生論理削除
+      description: 指定IDの受講生情報を非表示にします。
+      operationId: patchStudent
+      parameters:
+        - name: studentId
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int32
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              additionalProperties:
+                type: boolean
+        required: true
+      responses:
+        '204':
+          description: 成功
+        '400':
+          description: 更新処理に失敗しました
+        '500':
+          description: サーバーエラー
+  /courses/{courseId}:
+    put:
+      tags:
+        - コースマスタ管理
+      summary: コースマスタ更新
+      description: 既存のコースマスタを更新します。
+      operationId: updateCourseMaster
+      parameters:
+        - name: courseId
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int32
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Course'
+        required: true
+      responses:
+        '200':
+          description: 成功
+          content:
+            '*/*':
+              schema:
+                type: string
+        '400':
+          description: 更新処理に失敗しました
+          content:
+            '*/*':
+              schema:
+                type: string
+        '404':
+          description: 更新対象コースマスタが見つかりません
+          content:
+            '*/*':
+              schema:
+                type: string
+        '500':
+          description: サーバーエラー
+          content:
+            '*/*':
+              schema:
+                type: string
+    patch:
+      tags:
+        - コースマスタ管理
+      summary: コースマスタ閉講
+      description: 開講中のコースマスタを閉講に変更
+      operationId: patchCourseMaster
+      parameters:
+        - name: courseId
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int32
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              additionalProperties:
+                type: boolean
+        required: true
+      responses:
+        '200':
+          description: 成功
+        '400':
+          description: 更新処理に失敗しました
+        '500':
+          description: サーバーエラー
+  /students:
+    get:
+      tags:
+        - 受講生管理
+      summary: 受講生詳細検索
+      description: クエリパラメータから取得した条件で検索を行います。
+      operationId: searchStudents
+      parameters:
+        - name: searchForm
+          in: query
+          required: true
+          schema:
+            $ref: '#/components/schemas/StudentSearchForm'
+      responses:
+        '200':
+          description: 成功
+          content:
+            '*/*':
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/StudentDetail'
+        '404':
+          description: 該当する受講生が見つかりません
+          content:
+            '*/*':
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/StudentDetail'
+        '500':
+          description: サーバーエラー
+          content:
+            '*/*':
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/StudentDetail'
+    post:
+      tags:
+        - 受講生管理
+      summary: 受講生登録
+      description: 新規受講生の詳細情報を登録します。
+      operationId: registerStudent
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/StudentDetail'
+        required: true
+      responses:
+        '201':
+          description: 成功
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/StudentDetail'
+        '400':
+          description: 更新処理に失敗しました
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/StudentDetail'
+        '500':
+          description: サーバーエラー
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/StudentDetail'
+  /courses:
+    get:
+      tags:
+        - コースマスタ管理
+      summary: コースマスタ全件取得
+      description: コースマスタを全件取得します
+      operationId: getCourses
+      responses:
+        '200':
+          description: 成功
+          content:
+            '*/*':
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Course'
+        '404':
+          description: コースマスタが見つかりません
+          content:
+            '*/*':
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Course'
+        '500':
+          description: サーバーエラー
+          content:
+            '*/*':
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Course'
+    post:
+      tags:
+        - コースマスタ管理
+      summary: コースマスタ登録
+      description: 新規コースマスタを登録します。
+      operationId: registerCourseMaster
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Course'
+        required: true
+      responses:
+        '201':
+          description: 成功
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/Course'
+        '400':
+          description: 登録処理に失敗しました
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/Course'
+        '500':
+          description: サーバーエラー
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/Course'
+  /studentList:
+    get:
+      tags:
+        - 旧URIリダイレクト
+      summary: /students リダイレクト
+      description: 旧URIのハンドリングメソッドです。
+      operationId: redirectStudents
+      responses:
+        '200':
+          description: OK
 components:
   schemas:
     CourseDetail:
@@ -474,7 +506,6 @@ components:
           type: boolean
       required:
         - category
-        - courseId
         - courseName
         - duration
     StudentSearchForm:
